Renamed plot_ks_distro() -> plot_ks_peaks()
+

Added unit tests for plot_ks_peaks(), find_ks_peaks(), and find_peak_number()

+

Improved color handling in plot_ks_peaks()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(find_ks_peaks)
 export(find_peak_number)
 export(get_anchors_list)
 export(get_wgd_pairs)
-export(plot_ks_distro)
+export(plot_ks_peaks)
 importFrom(GenomicRanges,GRangesList)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,geom_histogram)
