--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
 Imports:
     syntenet,
-    GenomicRanges
+    GenomicRanges,
+    mixtools,
+    ggplot2,
+    stats
 Depends: 
     R (>= 4.2.0)
 Suggests: 
