--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,19 @@
 export(classify_gene_pairs)
 export(classify_genes)
 export(classify_ssd_pairs)
+export(find_intersect_mixtures)
 export(find_ks_peaks)
 export(find_peak_number)
 export(get_anchors_list)
 export(get_wgd_pairs)
 export(plot_ks_peaks)
+export(split_pairs_by_peak)
 importFrom(GenomicRanges,GRangesList)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,stat_function)
 importFrom(ggplot2,theme_bw)
