Added function get_transposed() and modified all functions related to duplicate gene classification to include option to identify TRD-derived gene pairs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(find_intersect_mixtures)
 export(find_ks_peaks)
 export(find_peak_number)
 export(get_anchors_list)
+export(get_transposed)
 export(get_wgd_pairs)
 export(plot_ks_peaks)
 export(split_pairs_by_peak)
@@ -23,3 +24,4 @@ importFrom(mixtools,boot.comp)
 importFrom(mixtools,normalmixEM)
 importFrom(stats,dnorm)
 importFrom(syntenet,intraspecies_synteny)
+importFrom(utils,read.table)
