--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ RoxygenNote: 7.2.0
 Imports:
     syntenet,
     GenomicRanges,
-    mixtools,
+    mclust,
+    MSA2dist (>= 1.1.4),
     ggplot2,
     stats
 Depends: 
