--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,7 @@
 export(classify_gene_pairs)
 export(classify_genes)
 export(classify_ssd_pairs)
-export(find_intersect_mixtures)
 export(find_ks_peaks)
-export(find_peak_number)
 export(get_anchors_list)
 export(get_transposed)
 export(get_wgd_pairs)
@@ -20,8 +18,8 @@ importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,stat_function)
 importFrom(ggplot2,theme_bw)
-importFrom(mixtools,boot.comp)
-importFrom(mixtools,normalmixEM)
+importFrom(mclust,densityMclust)
 importFrom(stats,dnorm)
+importFrom(syntenet,interspecies_synteny)
 importFrom(syntenet,intraspecies_synteny)
 importFrom(utils,read.table)
