--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(find_ks_peaks)
 export(get_anchors_list)
 export(get_transposed)
 export(get_wgd_pairs)
+export(pairs2kaks)
 export(plot_ks_peaks)
 export(split_pairs_by_peak)
 importFrom(GenomicRanges,GRangesList)
+importFrom(MSA2dist,dnastring2kaks)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_vline)
