Documented cds_scerevisiae and imported Biostrings::width

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(get_wgd_pairs)
 export(pairs2kaks)
 export(plot_ks_peaks)
 export(split_pairs_by_peak)
+importFrom(Biostrings,width)
 importFrom(GenomicRanges,GRangesList)
 importFrom(MSA2dist,dnastring2kaks)
 importFrom(ggplot2,aes_)
