--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,7 +48,8 @@ Imports:
     mclust,
     MSA2dist (>= 1.1.4),
     ggplot2,
-    stats
+    stats,
+    utils
 Depends: 
     R (>= 4.2.0)
 Suggests: 
