New feature: TRD duplicates can now be classified into rTRD and dTRD

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,14 +17,16 @@ Authors@R:
     )
 Description: doubletrouble aims to identify duplicated genes from
     whole-genome protein sequences and classify them based on their modes
-    of duplication. The duplication modes are: 
-    i. whole-genome duplication (WGD);
+    of duplication. The duplication modes are i. segmental duplication (SD);
     ii. tandem duplication (TD);
     iii. proximal duplication (PD);
     iv. transposed duplication (TRD) and;
     v. dispersed duplication (DD).
+    Transposon-derived duplicates (TRD) can be further subdivided into
+    rTRD (retrotransposon-derived duplication) and 
+    dTRD (DNA transposon-derived duplication).
     If users want a simpler classification scheme, duplicates can also be
-    classified into WGD- and SSD-derived (small-scale duplication) gene pairs.
+    classified into SD- and SSD-derived (small-scale duplication) gene pairs.
     Besides classifying gene pairs, users can also classify genes, so that
     each gene is assigned a unique mode of duplication. 
     Users can also calculate substitution rates per substitution site (i.e., Ka
@@ -40,7 +42,8 @@ biocViews:
     ComparativeGenomics,
     FunctionalGenomics,
     Phylogenetics,
-    Network
+    Network,
+    Classification
 Encoding: UTF-8
 LazyData: false
 Roxygen: list(markdown = TRUE)
@@ -52,8 +55,11 @@ Imports:
     mclust,
     MSA2dist (>= 1.1.5),
     ggplot2,
+    rlang,
     stats,
-    utils
+    utils,
+    AnnotationDbi,
+    GenomicFeatures
 Depends: 
     R (>= 4.2.0)
 Suggests: 
