--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,18 +2,22 @@
 
 export(classify_gene_pairs)
 export(classify_genes)
-export(classify_ssd_pairs)
 export(find_ks_peaks)
 export(get_anchors_list)
+export(get_intron_counts)
+export(get_segmental)
+export(get_tandem_proximal)
 export(get_transposed)
-export(get_wgd_pairs)
+export(get_transposed_classes)
 export(pairs2kaks)
 export(plot_ks_peaks)
 export(split_pairs_by_peak)
+importFrom(AnnotationDbi,select)
 importFrom(Biostrings,width)
+importFrom(GenomicFeatures,intronsByTranscript)
 importFrom(GenomicRanges,GRangesList)
 importFrom(MSA2dist,dnastring2kaks)
-importFrom(ggplot2,aes_)
+importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
@@ -22,6 +26,7 @@ importFrom(ggplot2,labs)
 importFrom(ggplot2,stat_function)
 importFrom(ggplot2,theme_bw)
 importFrom(mclust,densityMclust)
+importFrom(rlang,.data)
 importFrom(stats,dnorm)
 importFrom(syntenet,interspecies_synteny)
 importFrom(syntenet,intraspecies_synteny)
