Bug fix: fixed classify_genes() for empty levels and species ID removal in get_transposed_classes()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(pairs2kaks)
 export(plot_ks_peaks)
 export(split_pairs_by_peak)
 importFrom(AnnotationDbi,select)
+importFrom(BiocParallel,SerialParam)
+importFrom(BiocParallel,bplapply)
 importFrom(Biostrings,width)
 importFrom(GenomicFeatures,intronsByTranscript)
 importFrom(GenomicRanges,GRangesList)
