--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -47,7 +47,7 @@ biocViews:
 Encoding: UTF-8
 LazyData: false
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 Imports:
     syntenet,
     GenomicRanges,
@@ -59,7 +59,8 @@ Imports:
     stats,
     utils,
     AnnotationDbi,
-    GenomicFeatures
+    GenomicFeatures,
+    BiocParallel
 Depends: 
     R (>= 4.2.0)
 Suggests: 
