--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(classify_gene_pairs)
 export(classify_genes)
+export(duplicates2counts)
 export(find_ks_peaks)
 export(get_anchors_list)
 export(get_intron_counts)
@@ -10,7 +11,10 @@ export(get_tandem_proximal)
 export(get_transposed)
 export(get_transposed_classes)
 export(pairs2kaks)
+export(plot_duplicate_freqs)
+export(plot_ks_distro)
 export(plot_ks_peaks)
+export(plot_rates_by_species)
 export(split_pairs_by_peak)
 importFrom(AnnotationDbi,select)
 importFrom(BiocParallel,SerialParam)
@@ -20,15 +24,29 @@ importFrom(GenomicFeatures,intronsByTranscript)
 importFrom(GenomicRanges,GRangesList)
 importFrom(MSA2dist,dnastring2kaks)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,facet_grid)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_density)
 importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_violin)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggplot_build)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,stat_function)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,vars)
 importFrom(mclust,densityMclust)
 importFrom(rlang,.data)
+importFrom(stats,density)
 importFrom(stats,dnorm)
 importFrom(syntenet,interspecies_synteny)
 importFrom(syntenet,intraspecies_synteny)
